# Spatial_Co_Scientist

./: README.md
gen-ai-toolkit-main/: .dockerignore  .gitignore  README.md  data_context.json  environment.yml  pyproject.toml  try.py
gen-ai-toolkit-main/chainlit/: .env_sample  README.md  chainlit.md  main.py
gen-ai-toolkit-main/co_scientist/: README.md  agents.py  auth_token_devext.json  co_scientist.py  dspy_trail.ipynb  example_why_expert_rag_important.ipynb  experimentAgent.py  experimentAgent_new.py  experimentAgent_server.py  expert_interact_agent.py  extracted_questions_answers.json  guidedAnalysis.py  literatureAgent.py  main_gait.py  val.jsonl
gen-ai-toolkit-main/data_rag/: vdb_entities.json
gen-ai-toolkit-main/fastapi/: .env_sample  Dockerfile  README.md  main.py
gen-ai-toolkit-main/gait/: __init__.py  agency.py  agent.py  dialog.py  mao.py  mcp_agent.py  mcp_server.py  observer.py  operator.py  scratchpad.py  types.py  utils.py
gen-ai-toolkit-main/mcp/: README.md  server.py
gen-ai-toolkit-main/notebooks/: Agency.ipynb  Agent.ipynb  AgentWithDialog.ipynb  AgentsAsTools.ipynb  ChainOfDraft.ipynb  CurrentTime.ipynb  DialogSlidingWindow.ipynb  DuckDB.ipynb  EnglishSpanish.ipynb  FunctionCalling.ipynb  FunctionCallingWithState.ipynb  Instructor.ipynb  LayerSelector1.ipynb  LayerSelector2.ipynb  MCPAgent.ipynb  MultiAgentOrchastration.ipynb  NodeRouting.ipynb  ReAct.ipynb  ToolWithException.ipynb  Variations.ipynb  get_model_info.ipynb  natural-sql-7b.ipynb
gen-ai-toolkit-main/toolboxes/: GAITAdmin.pyt  GAITTools.atbx  PrepareExistingLocations.py  QueryExistingLocations.py  SelectExistingLocation.py  UpdateExistingLocations.py
gen-ai-toolkit-main/tutorial/: Embeddings.ipynb  FormatResponse.ipynb  FunctionCalling1.ipynb  FunctionCalling2.ipynb  Greet.ipynb  Ollama.ipynb  Phi4.ipynb  README.md  ReducingHallucinations.ipynb  Route1.ipynb  Route2.ipynb  SelectLayerByAttr1.ipynb  SelectLayerByAttr2.ipynb  Tutorial01.ipynb  Tutorial02.ipynb  vLLM.ipynb
gen-ai-toolkit-main/zp_toolboxes/: PrepareExistingLocations.py  (+1 more)
(+473 files in other folders)
